# FletPlus

./: .coverage  .gitignore  CHANGELOG.md  LICENSE.md  MANIFEST.in  Makefile  README.md  build_config.yaml  informe_tests.md  mkdocs.yml  noxfile.py  pip-audit.policy.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements.txt  resumen_conversacion.json  safety-policy.yml  setup.py
.github/workflows/: README.md  docs.yml  perf.yml  qa.yml  quality.yml  reusable-quality.yml
docs/: REVISION_INGENIERIA_2025.md  TAREAS_IMPLEMENTACION.md  animation.md  app.md  building.md  cli.md  components.md  context.md  demo.md  deployment.md  flet-feature-adoption.md  frontend-projects.md  frontend-roadmap.md  fullstack-projects.md  http.md  icons.md  index.md  installer.md  link-style.md  migration-flet-latest.md  pyrust-auto.md  responsive.md  router.md  storage.md  themes.md  tooling.md  web.md
examples/: __init__.py  _bootstrap.py  animation_examples.py  buttons_examples.py  custom_palette_platforms.json  frontend_desktop_showcase.py  frontend_layout_examples.py  frontend_mobile_showcase.py  frontend_showcase_common.py  frontend_web_showcase.py  layouts_examples.py  palette_extended.json  responsive_container_example.py  responsive_typography_example.py  router_basic.py  smart_table_examples.py  state_hooks_example.py  states_examples.py
examples/responsive_demo/: README.md  floating_navigation_demo.py  viewport_density_demo.py
fletplus/: __init__.py  core.py  core_legacy.py
fletplus/animation/: __init__.py  controller.py  listeners_backend.py  listeners_rs.py  wrappers.py
fletplus/cli/: __init__.py  build.py  catalog.py  installer.py  main.py
fletplus/cli/templates/app/: README.md  pyproject.toml  requirements.txt
fletplus/cli/templates/app/src/: __init__.py  assets.py  main.py  theme.py
fletplus/cli/templates/app/src/frontend/: config.py  layout.py  theme.py
fletplus/cli/templates/desktop/: README.md  pyproject.toml
fletplus/cli/templates/desktop/assets/: README.md
fletplus/cli/templates/desktop/src/: main.py  theme.py
fletplus/cli/templates/desktop/src/frontend/: __init__.py  config.py  layout.py  routes.py  theme.py
fletplus/cli/templates/mobile/: README.md  pyproject.toml
fletplus/cli/templates/mobile/assets/: README.md
fletplus/cli/templates/mobile/src/: main.py  routes.py  theme.py
fletplus/cli/templates/mobile/src/frontend/: config.py
fletplus/cli/templates/web/: README.md  pyproject.toml  requirements.txt
fletplus/cli/templates/web/src/: main.py  theme.py
fletplus/cli/templates/web/src/frontend/: config.py  layout.py  theme.py
fletplus/cli/templates/web/web/: manifest.json  service_worker.js
fletplus/components/: __init__.py  accessibility_panel.py  adaptive_app_header.py  adaptive_layout.py  buttons.py  caption_overlay.py  command_palette.py  frontend_layouts.py  layouts.py  responsive_container.py  responsive_grid.py  sidebar_admin.py  smart_table.py  states.py  universal_scaffold.py
fletplus/context/: __init__.py
fletplus/core/: __init__.py  app.py  layout.py  state.py
fletplus/desktop/: __init__.py  notifications.py  system_tray.py  window_manager.py
fletplus/devtools/: __init__.py  server.py
fletplus/frontend/: __init__.py  config.py
fletplus/http/: __init__.py  client.py  disk_cache.c  disk_cache.pxd  disk_cache.py  disk_cache.pyx  disk_cache_pr.py  disk_cache_py.py
fletplus/icons/: __init__.py  lucide.json  material.json
fletplus/rendering/: __init__.py  strategies.py
fletplus/router/: __init__.py  route.py  router.py  router_cy.c  router_cy.pxd  router_cy.pyx  router_pr.py  router_rs.py
fletplus/state/: __init__.py  _native.py  hooks.py  state.c  state.pxd  state.py  state.pyx
fletplus/storage/: __init__.py  files.py  local.py  session.py
fletplus/styles/: __init__.py  style.py
fletplus/themes/: __init__.py  adaptive_theme.py  palettes.py  presets.py  theme_manager.py
fletplus/utils/: __init__.py  _native.py  accessibility.py  device.py  device_profiles.py  dragdrop.py  flet_compat.py  flet_compat_patch.py  preferences.py  responsive_breakpoints.py  responsive_manager.c  responsive_manager.pxd  responsive_manager.py  responsive_manager.pyx  responsive_style.py  responsive_typography.py  responsive_visibility.py  safe_subprocess.py  shortcut_manager.py  viewport.py
fletplus/web/: __init__.py  pwa.py
fletplus_demo/: __init__.py  __main__.py  app.py  capture.py
tests/: conftest.py  test_accessibility.py  test_accessibility_panel.py  test_adaptive_app_header.py  test_adaptive_layout.py  test_all.py  test_animation.py  test_animation_listeners.py  test_animation_listeners_parity.py  test_build_contracts.py  test_buttons.py  test_caption_overlay.py  test_check_bandit_command_sync.py  test_check_ci_workflow_contract.py  test_check_optional_dependency_refs.py  test_cli_build.py  test_cli_create.py  test_cli_installer.py  test_cli_main.py  test_cli_template_contracts.py  test_command_palette.py  test_command_palette_rs_backend.py  test_context.py  test_core_logging.py  test_demo_template_smoke.py  test_device_detection.py  test_device_profiles.py  test_docs_build_deployment_links.py  test_dragdrop.py  test_examples_bootstrap.py  test_flet_api_contracts.py  test_flet_compat.py  test_flet_compat_patch_activation.py  test_flet_version_matrix.py  test_fletplus_app.py  test_frontend_config.py  test_frontend_layouts.py  test_http_cache.py  test_http_client.py  test_http_client_import.py  (+43 more)
tests/devtools/: test_optional_dependency.py  test_server.py
tests/examples/: test_minimal_app_smoke.py
tests/perf/: test_animation_perf.py  test_command_palette_filter_perf.py  (+4 more)
tools/: check_bandit_command_sync.py  check_canonical_repo_links.py  check_ci_workflow_contract.py  check_flet_target_drift.py  check_github_workflows.py  check_optional_dependency_refs.py  check_package_data_files.py  check_test_dependencies.py  flet_version_matrix_config.py  pyrust_auto_report.md  pyrust_native_auto.sh  pyrust_profile_entrypoint.py  qa.sh  select_cython_modules.py  update_flet_target.py
(+61 files in other folders)
