[build-system]
requires = ["setuptools>=61.0", "Cython>=3.0", "pyyaml>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fletplus"
version = "0.2.6"
description = "Componentes visuales avanzados para Flet en Python"
authors = [
  { name = "Adolfo González", email = "adolfogonzal@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "flet>=0.27.0",
  "click>=8.1",
  "watchdog>=3.0",
  "websockets>=12.0"
]

[project.scripts]
fletplus-demo = "fletplus_demo:main"
fletplus_demo = "fletplus_demo:main"
fletplus = "fletplus.cli.main:app"

[project.urls]
Homepage = "https://github.com/Alphonsus411/fletplus"
Repository = "https://github.com/Alphonsus411/fletplus"
Documentation = "https://github.com/Alphonsus411/fletplus#readme"

# -------------------------------
# INCLUSIÓN DE ARCHIVOS DE DATOS
# -------------------------------
[tool.setuptools.package-data]
"fletplus.router" = ["router_cy.c", "router_cy.pyx", "router_cy.pxd"]
"fletplus.http" = ["disk_cache.c", "disk_cache.pyx", "disk_cache.pxd"]
"fletplus.utils" = ["responsive_manager.c", "responsive_manager.pyx", "responsive_manager.pxd"]

# ----------------------------------------------------
# DEFINICIÓN DE EXTENSIONES CYTHON (¡LO QUE FALTABA!)
# ----------------------------------------------------
[tool.setuptools.extension."fletplus.router.router_cy"]
sources = ["fletplus/router/router_cy.pyx"]

[tool.setuptools.extension."fletplus.http.disk_cache"]
sources = ["fletplus/http/disk_cache.pyx"]

[tool.setuptools.extension."fletplus.utils.responsive_manager"]
sour
