[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ package_name }}"
version = "0.1.0"
description = "Aplicación FletPlus generada desde la plantilla mobile."
requires-python = ">=3.10"
dependencies = [
  "flet>=0.80,<0.86",
  "fletplus>=0.4,<0.5",
]

[tool.fletplus]
app = "src/main.py"
default_target = "{{ target_value }}"

assets_dir = "assets"
icon = "assets/icon.png"
build_timeout = 900

[tool.fletplus.frontend]
palette = "{{ palette_name }}"
mode = "{{ theme_mode }}"
font_family = "{{ font_family }}"
page_padding = {{ page_padding }}
max_content_width = {{ max_content_width }}
min_content_width = 320
spacing = {{ spacing }}
layout_density = "{{ layout_density }}"
preset = "{{ preset_name }}"
target = "{{ target_value }}"

# Ejemplos opcionales de personalización:
# [tool.fletplus.frontend.fonts]
# Inter = "assets/fonts/Inter.ttf"
# Roboto = "assets/fonts/Roboto-Regular.ttf"
#
# [tool.fletplus.frontend.tokens.colors]
# primary = "#2563EB"
# surface = "#FFFFFF"
#
# [tool.fletplus.frontend.tokens.spacing]
# page = 24
# section = 32

[tool.fletplus.web]
view = "ft.AppView.FLET_APP"
pwa = false
manifest = "web/manifest.json"
service_worker = "web/service_worker.js"

[tool.fletplus.desktop]
width = 1280
height = 820
min_width = 960
min_height = 640

[tool.fletplus.mobile]
package = "com.example.{{ package_name }}"
orientation = "portrait"
